--- a/src/templates/pechat-na-kruzhkah-naneseniye-na-kruzhkhi-i_posudu.jade
+++ b/src/templates/pechat-na-kruzhkah-naneseniye-na-kruzhkhi-i_posudu.jade
@@ -69,10 +69,10 @@ block content
 						+b.look._cups
 							+e.row
 								+b.zoom.look__item
-									+e.A.element(href='img/content/look-cup_lg.jpg' data-fancybox='look-img')
+									+e.A.element(href='img/content/look-cup_lg.png' data-fancybox='look-img')
 										+e.BUTTON.btn(type='button')
 											+icon('icon-loupe','zoom__btn-icon')
-										+e.img.IMG(src='img/content/look-cup.jpg')
+										+e.img.IMG(src='img/content/look-cup.png')
 									+b.SPAN.look__label 3D Кружки предоставим!
 								+b.zoom.look__item._border
 									+e.A.element(href='img/content/look-scheme_lg.jpg' data-fancybox='look-img')
@@ -167,23 +167,23 @@ block content
 								+e.TBODY.body
 									+e.TR
 										+e.TD
-											+e.MARK.label
+											+e.MARK.label._sm
 												+e.STRONG Печать на класических
 													+e.BR
 													| белых кружках
 											+e.view._spaces._white-c
 												+b.zoom.price-table__view-item
-													+e.A.element(href='img/content/white-cup-1_lg.jpg' data-fancybox='white-cups')
+													+e.A.element(href='img/content/white-cup-1_lg.png' data-fancybox='white-cups')
 														+e.BUTTON.btn._sm(type='button')
 															+icon('icon-loupe','zoom__btn-icon')
 														+e.img.IMG(src='img/content/white-cup-1.jpg')
 												+b.zoom.price-table__view-item
-													+e.A.element(href='img/content/white-cup-2_lg.jpg' data-fancybox='white-cups')
+													+e.A.element(href='img/content/white-cup-2_lg.png' data-fancybox='white-cups')
 														+e.BUTTON.btn._sm(type='button')
 															+icon('icon-loupe','zoom__btn-icon')
 														+e.img.IMG(src='img/content/white-cup-2.jpg')
 												+b.zoom.price-table__view-item
-													+e.A.element(href='img/content/white-cup-3_lg.jpg' data-fancybox='white-cups')
+													+e.A.element(href='img/content/white-cup-3_lg.png' data-fancybox='white-cups')
 														+e.BUTTON.btn._sm(type='button')
 															+icon('icon-loupe','zoom__btn-icon')
 														+e.img.IMG(src='img/content/white-cup-3.jpg')
@@ -217,7 +217,7 @@ block content
 												| Много вариантов, тридцать
 												+e.BR
 												| разновидностей!
-											+e.view
+											+e.view._padding
 												+b.zoom.price-table__view-item
 													+e.A.element(href='img/content/color-cups_lg.jpg' data-fancybox='color-cups')
 														+e.BUTTON.btn._sm._top(type='button')
@@ -246,7 +246,7 @@ block content
 
 									+e.TR
 										+e.TD
-											+e.MARK.label
+											+e.MARK.label._full
 												+e.STRONG Печать на кружках «Хамелеон»
 												= ' '
 												| Изображение появляется при
@@ -381,7 +381,7 @@ block content
 							+e.package-col
 								+e.package-row._first
 									+b.zoom.cups__package-item
-										+e.A.element(href='img/content/package-1_lg.jpg' data-fancybox='cups-package')
+										+e.A.element(href='img/content/package-1_lg.png' data-fancybox='cups-package')
 											+e.BUTTON.btn._sm._top._color(type='button')
 												+icon('icon-loupe','zoom__btn-icon')
 											+e.img.IMG(src='img/content/package-1.jpg')
@@ -394,7 +394,7 @@ block content
 
 								+e.package-row._second
 									+b.zoom.cups__package-item
-										+e.A.element(href='img/content/package-3_lg.jpg' data-fancybox='cups-package')
+										+e.A.element(href='img/content/package-3_lg.png' data-fancybox='cups-package')
 											+e.BUTTON.btn._sm._top._color(type='button')
 												+icon('icon-loupe','zoom__btn-icon')
 											+e.img.IMG(src='img/content/package-3.jpg')
@@ -405,7 +405,7 @@ block content
 											+e.img.IMG(src='img/content/package-4.jpg')
 											+b.cups__package-label._font Промежуточная упаковка - калька
 									+b.zoom.cups__package-item
-										+e.A.element(href='img/content/package-5_lg.jpg' data-fancybox='cups-package')
+										+e.A.element(href='img/content/package-5_lg.png' data-fancybox='cups-package')
 											+e.BUTTON.btn._sm._top._color(type='button')
 												+icon('icon-loupe','zoom__btn-icon')
 											+e.img.IMG(src='img/content/package-5.jpg')
@@ -431,38 +431,12 @@ block content
 												+e.STRONG Упаковка в обёрточную бумагу
 													+e.BR
 													| + ленточка или шнурок.
-											+e.view._spaces-lg._paper-packs
+											+e.view._paper-packs
 												+b.zoom.price-table__view-item
-													+e.A.element(href='img/content/love-pack_1-lg.jpg' data-fancybox='love-pack')
+													+e.A.element(href='img/content/paper-package-cups.jpg' data-fancybox='paper-pack')
 														+e.BUTTON.btn._sm._color._top(type='button')
 															+icon('icon-loupe','zoom__btn-icon')
-														+e.img.IMG(src='img/content/paper-package-1.jpg')
-												+b.zoom.price-table__view-item
-													+e.A.element(href='img/content/love-pack_1-lg.jpg' data-fancybox='love-pack')
-														+e.BUTTON.btn._sm._color._top(type='button')
-															+icon('icon-loupe','zoom__btn-icon')
-														+e.img.IMG(src='img/content/paper-package-1.jpg')
-												+b.zoom.price-table__view-item
-													+e.A.element(href='img/content/love-pack_1-lg.jpg' data-fancyb                                        ox='love-pack')
-														+e.img.IMG(src='img/content/paper-package-1.jpg')
-														+e.BUTTON.btn._sm._color._top(type='button')
-															+icon('icon-loupe','zoom__btn-icon')
-											+e.view._spaces-lg._paper-packs
-												+b.zoom.price-table__view-item
-													+e.A.element(href='img/content/love-pack_1-lg.jpg' data-fancybox='love-pack')
-														+e.img.IMG(src='img/content/paper-package-4.jpg')
-														+e.BUTTON.btn._sm._color._top(type='button')
-															+icon('icon-loupe','zoom__btn-icon')
-												+b.zoom.price-table__view-item
-													+e.A.element(href='img/content/love-pack_1-lg.jpg' data-fancybox='love-pack')
-														+e.img.IMG(src='img/content/paper-package-4.jpg')
-														+e.BUTTON.btn._sm._color._top(type='button')
-															+icon('icon-loupe','zoom__btn-icon')
-												+b.zoom.price-table__view-item
-													+e.A.element(href='img/content/love-pack_1-lg.jpg' data-fancybox='love-pack')
-														+e.img.IMG(src='img/content/paper-package-4.jpg')
-														+e.BUTTON.btn._sm._color._top(type='button')
-															+icon('icon-loupe','zoom__btn-icon')
+														+e.img.IMG(src='img/content/paper-package-cups.jpg')
 
 										+e.TD
 											+e.SPAN.text 70 руб.
@@ -743,7 +717,7 @@ block content
 									+e.A(href='#!').item-in
 										+e.FIGCAPTION.item-text
 											+e.H4.item-title
-												+e.SPAN НАЧКИ И РУЧНЫЕ СУВЕНИРЫ
+												+e.SPAN ЗНАЧКИ И РУЧНЫЕ СУВЕНИРЫ
 								+e.FIGURE.item._lg._border-red
 									+e.item-img.IMG(src='img/content/cups-types-7.jpg')
 									+e.A(href='#!').item-in
@@ -780,7 +754,7 @@ block content
 							+e.in
 								+e.col
 									+b.zoom.overview__item
-										+e.element.A(href='img/content/package-5_lg.jpg' data-fancybox='present-pack')
+										+e.element.A(href='img/content/package-5_lg.png' data-fancybox='present-pack')
 											+e.img.IMG(src='img/content/overview-1.jpg')
 											+e.BUTTON(type='button').btn._top-rc
 												+icon('icon-loupe','zoom__btn-icon')
