--- a/src/templates/category-page.jade
+++ b/src/templates/category-page.jade
@@ -57,9 +57,9 @@ block content
 													+icon('icon-arr-def', 'product__calc-icon')
 													+e.SPAN Рассчитать свой - заказной дизайн
 											+e.props-row
-												+b.rating._product-card
+												+b.rating
 													+e.text Оцените данный товар:
-													+e.in.js-rating
+													+e.in
 														+e.INPUT.input(id='product-rating-6' value='6' type='radio' name='product-rating')
 														+e.LABEL.icon(for='product-rating-6')
 															+icon('icon-star', 'rating__star')
