--- a/src/templates/pictures-page.jade
+++ b/src/templates/pictures-page.jade
@@ -52,7 +52,7 @@ block content
 									| На картине сзади будут качественные полноценные подвесы и специальная декоративная проволочка (на выбор возможны и другие варианты крепления).
 
 					+b.product
-						+e.sect._has-filter._color
+						+e.sect._color._has-filter.js-product-filter
 							+e.sect-title
 								+icon('icon-pictures', 'product__sect-icon')
 								+e.SPAN Печать картин / Образцы наших работ
@@ -77,10 +77,10 @@ block content
 									+icon('icon-filter-squares', 'product__filter-icon')
 									= ' '
 									+e.SPAN 60
-								+e.BUTTON.filter-btn(type='button')
+								+e.BUTTON.filter-btn.js-filter-view-btn(type='button')
 									+icon('icon-filter-list', 'product__filter-icon')
 
-						+e.examples._default
+						+e.examples._default.js-filter-container
 							+e.item
 								+e.item-pic-wrap.js-product-item-pic
 									+e.A(href='#!').item-pic.decor
@@ -294,7 +294,6 @@ block content
 									+e.BUTTON(type="button").cart-add
 										+e.SPAN.price-current 400&nbsp;
 											+icon('icon-ruble','product__val-icon')
-
 
 						+b.pagination._product
 							+e.UL.list
